After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 622384 - string fixes, translator comments
string fixes, translator comments
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.17.x
Other All
: Normal minor
: 3.18
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-06-22 11:49 UTC by Ivan Masár
Modified: 2015-09-01 13:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gschema: add translator comment for geometry (1.15 KB, patch)
2015-09-01 13:50 UTC, Carlos Soriano
committed Details | Review
properties-window: fix text (981 bytes, patch)
2015-09-01 13:51 UTC, Carlos Soriano
committed Details | Review

Description Ivan Masár 2010-06-22 11:49:07 UTC
libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
"to avoid unintentionally blowing the heap and killing Nautilus"
should be:
"to avoid unintentionally blowing the heap and crashing Nautilus"

Reason: killing is an external action for the affected application (i.e. recieving a signal)


libnautilus-private/apps_nautilus_preferences.schemas.in.h:126
"The geometry string for a navigation window."

If this refers to X Window System window geometry, please mention it in the translator comment.


libnautilus-private/nautilus-mime-application-chooser.c:255
"Default"
libnautilus-private/nautilus-open-with-dialog.c:998
"Unknown"

Please add translation comment so that gender of the object can be determined, i.e. "default application".


#: ../src/file-manager/fm-icon-view.c:127
#: ../src/file-manager/fm-icon-view.c:1618
msgid "Keep icons sorted by name in rows"

#: ../src/file-manager/fm-icon-view.c:1614
msgid "Leave icons wherever they are dropped"

src/file-manager/fm-directory-view.c:7309
Copy the current selection to the other pane in the window
src/file-manager/fm-directory-view.c:7312
"Move the current selection to the other pane in the window"
...and following strings.

Please add TC. Where is this used? Is it a tooltip?


#: ../src/file-manager/fm-properties-window.c:509
#: ../src/nautilus-information-panel.c:492
msgid "Please drag just one image to set a custom icon."

Drop instead of drag?


#: ../src/nautilus-navigation-window-menus.c:796
msgid "Open another Nautilus window for the displayed location"

#: ../src/nautilus-navigation-window-menus.c:826
msgid "Activate previous tab"

#: ../src/nautilus-navigation-window-menus.c:829
msgid "Activate next tab"

#: ../src/nautilus-navigation-window-menus.c:898
msgid "Go to the previous visited location"

#: ../src/nautilus-navigation-window-menus.c:915
msgid "Go to the next visited location"

#: ../src/nautilus-window-menus.c:804
msgid "Open the parent folder"

TC: tooltip


#: ../src/nautilus-property-browser.c:1194
msgid "Sorry, but you cannot replace the reset image."

#: ../src/nautilus-property-browser.c:1195
msgid "Reset is a special image that cannot be deleted."

#: ../src/nautilus-query-editor.c:264
msgid "Select folder to search in"

TC: What is this, how to find it?


#: ../src/nautilus-property-browser.c:1251
msgid "Select an Image File to Add as a Pattern"

TC: window title


#: ../src/nautilus-property-browser.c:1194
msgid "Sorry, but you cannot replace the reset image."

TC: Edit - Backgrounds and Emblems


#: ../src/nautilus-property-browser.c:1251
msgid "Select an Image File to Add as a Pattern"

TC: window title; Edit - Backgrounds and Emblems - Emblems - Add a New Emblem - Image
Comment 1 Allan Day 2010-07-05 11:42:34 UTC
Changing component as a part of ongoing bug reorganisation work.
Comment 2 André Klapper 2011-10-05 09:32:48 UTC
Updating list of still existing strings in current git master (3.2.0+):


#: ../libnautilus-private/org.gnome.nautilus.gschema.xml.in.h:88
"The geometry string for a navigation window."

If this refers to X Window System window geometry, please mention it in the
translator comment.


#: ../src/nautilus-icon-view.c:139 ../src/nautilus-icon-view.c:1400
"Keep icons sorted by name in rows"

#: ../src/nautilus-icon-view.c:1396
"Leave icons wherever they are dropped"

#: ../src/nautilus-view.c:7169
"Copy the current selection to the other pane in the window"

#: ../src/nautilus-view.c:7172
"Move the current selection to the other pane in the window"
...and following strings.

Please add TC. Where is this used? Is it a tooltip?


#: ../src/nautilus-properties-window.c:495
"Please drag just one image to set a custom icon."

Drop instead of drag?


#: ../src/nautilus-window-menus.c:1018
msgid "Open another Nautilus window for the displayed location"

#: ../src/nautilus-window-menus.c:1048
msgid "Activate previous tab"

#: ../src/nautilus-window-menus.c:1051
msgid "Activate next tab"

#: ../src/nautilus-window-menus.c:1027 ../src/nautilus-window-menus.c:1117
msgid "Go to the previous visited location"

#: ../src/nautilus-window-menus.c:1030 ../src/nautilus-window-menus.c:1132
msgid "Go to the next visited location"

#: ../src/nautilus-window-menus.c:929
msgid "Open the parent folder"

TC: tooltip


#: ../src/nautilus-query-editor.c:276
msgid "Select folder to search in"

TC: What is this, how to find it?
Comment 3 André Klapper 2011-10-05 09:34:20 UTC
Ivan: And now trying to understand why this is needed by translators...

(In reply to comment #2)
> #: ../src/nautilus-icon-view.c:139 ../src/nautilus-icon-view.c:1400
> "Keep icons sorted by name in rows"
> 
> #: ../src/nautilus-icon-view.c:1396
> "Leave icons wherever they are dropped"
> 
> #: ../src/nautilus-view.c:7169
> "Copy the current selection to the other pane in the window"
> 
> #: ../src/nautilus-view.c:7172
> "Move the current selection to the other pane in the window"
> ...and following strings.
> 
> Please add TC. Where is this used? Is it a tooltip?

How/why does this matter?

> #: ../src/nautilus-window-menus.c:1018
> msgid "Open another Nautilus window for the displayed location"
> 
> #: ../src/nautilus-window-menus.c:1048
> msgid "Activate previous tab"
> 
> #: ../src/nautilus-window-menus.c:1051
> msgid "Activate next tab"
> 
> #: ../src/nautilus-window-menus.c:1027 ../src/nautilus-window-menus.c:1117
> msgid "Go to the previous visited location"
> 
> #: ../src/nautilus-window-menus.c:1030 ../src/nautilus-window-menus.c:1132
> msgid "Go to the next visited location"
> 
> #: ../src/nautilus-window-menus.c:929
> msgid "Open the parent folder"
> 
> TC: tooltip

How/why does this matter?

> 
> #: ../src/nautilus-query-editor.c:276
> msgid "Select folder to search in"
> 
> TC: What is this, how to find it?

How/why does this matter?
Comment 4 Alexandre Franke 2015-06-15 18:19:55 UTC
Updating list of still existing strings in current git master (3.17.0+):


#: ../libnautilus-private/org.gnome.nautilus.gschema.xml.in.h:88
"The geometry string for a navigation window."

If this refers to X Window System window geometry, please mention it in the
translator comment.


#: ../src/nautilus-properties-window.c:495
"Please drag just one image to set a custom icon."

Drop instead of drag?
Comment 5 Carlos Soriano 2015-09-01 13:50:55 UTC
Created attachment 310420 [details] [review]
gschema: add translator comment for geometry
Comment 6 Carlos Soriano 2015-09-01 13:51:01 UTC
Created attachment 310421 [details] [review]
properties-window: fix text

We wanted to say drop instead of drag.
Comment 7 Carlos Soriano 2015-09-01 13:52:17 UTC
Attachment 310420 [details] pushed as 5a9cf19 - gschema: add translator comment for geometry
Attachment 310421 [details] pushed as 54ac563 - properties-window: fix text