properties-window: fix text

We wanted to say drop instead of drag.

https://bugzilla.gnome.org/show_bug.cgi?id=622384